generating pdfs - better referencing of the resource files